[gd_scene load_steps=4 format=2]

[ext_resource path="res://KingdomSelector.gd" type="Script" id=1]
[ext_resource path="res://Utils/Control.gd" type="Script" id=2]


[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 1

[node name="KingdomSelector" type="Control"]
script = ExtResource( 1 )

[node name="Rect" type="Panel" parent="."]
margin_left = -11.0
margin_top = -83.1117
margin_right = 11.0
margin_bottom = 16.8883
rect_rotation = 31.4722
rect_pivot_offset = Vector2( 11, 90 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.02931
margin_top = 20.6054
margin_right = 43.9707
margin_bottom = 34.6054
rect_rotation = -89.8586
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "World 1"
valign = 1

[node name="Circle" type="Control" parent="."]
margin_left = -0.154892
margin_top = 7.15489
margin_right = -0.154892
margin_bottom = 7.15489
script = ExtResource( 2 )
radius = 3.0
color = Color( 1, 0, 0, 1 )
outline_width = 0.5
outline_color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="gui_input" from="Rect" to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="Rect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Rect" to="." method="_on_mouse_exited"]
